[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-incident-response-20260717"
version = "0.1.0"
description = "A constrained incident-response agent that routes alerts to tools through auditable plans and approval gates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "R-behera" }]
dependencies = []

[project.scripts]
agentic-incident-response-20260717 = "agentic_incident_response.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
